<resources>
    <string name="app_name">foodPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_image_desc">meal_image_desc</string>
    <string name="meal_name">meal_name</string>
    <string name="category_area">category_area</string>
    <string name="instructions">instructions</string>
    <string name="instructions_details">instructions_details</string>
    <string name="ingredientName">ingredientName</string>
    <string name="ingredientmeasure">ingredientmeasure</string>
    <string name="filter_category">filter_category</string>
    <string name="filter_country">filter_country</string>
    <string name="filter_ingredient">filter_ingredient</string>
    <string name="search">search</string>
    <string name="search_hint">Search meals...</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="no_results_found">No results found</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="meal_image">Meal image</string>
    <string name="ingredient_image">Ingredient image</string>
    <string name="ingredients">Ingredients</string>
    <string name="no_favorites">No favorite meals yet</string>
    <string name="delete">Delete meal</string>
    <string name="default_web_client_id">911682355697-lkfra7644ild55gtqv2sjjdmr3b93fvv.apps.googleusercontent.com</string>
</resources>